styles/style.scss
/* ... */
.readme a {
	color: #8f46ec;
}
.header {
	.top {
		display: -ms-flexbox;
		display: flex;
		-ms-flex-pack: justify;
		justify-content: space-between;
		-ms-flex-align: center;
		align-items: center;
		margin-top: 55px;
	}
	.logo {
		margin: 0;
		a {
			font-size: 0;
			display: block;
			img {
				outline: none;
			}
		}
	}
	.action {
		position: relative;
		overflow: hidden;
		padding-bottom: 2px;
		font-weight: 600;
		font-size: 15px;
		color: #000;
		cursor: pointer;
		&:after {
			content: "";
			position: absolute;
			width: 100%;
			height: 2px;
			bottom: 0;
			left: 0;
			z-index: 2;
			background-color: #C098F3;
			visibility: hidden;
			transition: all 0.2s ease-in-out 0s;
			transform: translateX(-100%);
		}
		&:hover {
			&:after {
				visibility: visible;
				transform: translateX(0);
			}
		}
	}
	.content {
		margin-top: 130px;
		position: relative;
	}
	.swing {
		position: absolute;
		right: 0;
		top: -55px;
		z-index: -1;
		animation-duration: 4s;
		animation: swing ease-in-out 2s infinite alternate;
		transform-origin: center -20px;
		img {
			display: block;
			right: 0;
			top: 25px;
		}
		&::after {
			content: '';
			position: absolute;
			right: 0;
			top: -55px;
			transform: rotate(45deg);
			z-index: 0;
		}		
		@keyframes swing {
		    0% { transform: rotate(3deg); }
		    100% { transform: rotate(-3deg); }
		}
	}
	.heading {
		font-weight: 900;
		font-size: 55px;
		color: #000;
		box-shadow: inset -650px -12px 0 #fff, inset 0 -23px 0 #cca9f9;
		transition: all 0.75s cubic-bezier(0.36, 0, 0, 0.99);
		&.readme {
			box-shadow: inset -750px -12px 0 #fff, inset 0 -23px 0 #cca9f9;
		}
	}
	.heading.animate {
		box-shadow: inset 0 -12px 0 #fff, inset 0 -23px 0 #cca9f9;
	}
	.heading.readme.animate {
		box-shadow: inset 0 -12px 0 #fff, inset 0 -23px 0 #cca9f9;
	}
	.description {
		max-width: 400px;
		margin-top: 70px;
		font-size: 21px;
		color: #000;
		line-height: 40px;
		&.readme {
			max-width: 100% !important;
			margin-top: 40px;
			width: 100% !important;
		}
	}
}
.projects {
	background: #2A1B3D;
	margin-top: 150px;
	&.readme {
		margin-top: 100px;
	}
	.col-1000 {
		display: -ms-flexbox;
		display: flex;
		-ms-flex-pack: justify;
		justify-content: space-between;
		position: relative;
		top: -150px;
	}
	.column {
		width: calc(50% - 50px);
	}
	.column.-left {
		margin-top: 100px;
	}
	.wrap {
		display: block;
		margin-bottom: 100px;
		&:last-of-type {
			margin-bottom: 0;
		}
	}
}
.project {
	background: #222;
	box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.4);
	transform-style: preserve-3d;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	perspective: 1000;
	&:hover {
		.-paralax {
			transform: translateZ(20px);
		}
		.more {
			&:after {
				visibility: visible;
				transform: translateX(0);
			}
		}
	}
	.-paralax {
		transform: translateZ(0);
		transition: all 0.4s ease;
	}
	.image {
		max-width: 100%;
	}
	.details {
		padding: 50px 40px 60px 40px;
	}
	.type {
		font-weight: 600;
		font-size: 13px;
		color: rgba(255, 255, 255, 0.34);
	}
	.description {
		max-width: 260px;
		margin-top: 25px;
		font-size: 16px;
		color: #fff;
		letter-spacing: 0.23px;
		line-height: 31px;
	}
	.bottom {
		display: -ms-flexbox;
		display: flex;
		-ms-flex-pack: justify;
		justify-content: space-between;
		-ms-flex-align: center;
		align-items: center;
		margin-top: 40px;
	}
	.name {
		font-weight: 700;
		font-size: 20px;
		color: #fff;
	}
	.more {
		position: relative;
		overflow: hidden;
		padding: 7px 0 3px;
		font-weight: 700;
		font-size: 13px;
		color: #C098F3;
		&:after {
			content: "";
			position: absolute;
			width: 100%;
			height: 2px;
			bottom: 0;
			left: 0;
			z-index: 2;
			background-color: #C098F3;
			visibility: hidden;
			transition: all 0.2s ease-in-out 0s;
			transform: translateX(-100%);
		}
	}
}
.skills {
	padding-bottom: 150px;
	background: #2A1B3D;	
	.heading {
		max-width: 600px;
		margin: 0 auto;
		font-weight: 700;
		font-size: 45px;
		color: #fff;
		text-align: center;
	}
	&.readme .heading {
		margin-left: 0;
		padding-top: 120px;
		text-align: left;
	}
	.list {
		margin: 0;
		padding: 0;
		margin-top: 70px;
	}
	&.readme .list {
		margin: 30px;
		position: relative;
		z-index: 1;
		&::before {			
		    background-size: 461px 346px;
		    display: inline-block;
		    position: absolute;
		    width: 461px;
		    height: 346px;
		    left: 360px;
		    top: 60px;
		    content: "";
			background-image: url("../images/hours.png");
			opacity: 0.6;
		}
	}
	.row {
		max-width: 520px;
		display: -ms-flexbox;
		display: flex;
		-ms-flex-pack: justify;
		justify-content: space-between;
		margin: 0 auto 10px auto;
		&:last-of-type {
			margin-bottom: 0;
		}
	}
	.item {
		width: 50%;
		padding-left: 30px;
		box-sizing: border-box;
		font-size: 21px;
		color: #fff;
		list-style: none;
		&:before {
			content: "◦";
			width: 30px;
			position: relative;
			bottom: -3px;
			display: inline-block;
			margin-left: -30px;
			color: #C098F3;
			font-size: 36px;
			font-weight: 700;
		}
	}
	.text {
		color: #fff;
		font-size: 21px;
		position: relative;
		z-index: 1;
	}
	&.readme .callout {		
		color: #fff;
		font-size: 24px;
		font-weight: bold;
		margin-bottom: -10px;
		padding: 30px 0 0;
	}
	&.readme a {
		color: #C098F3;
	}
}
/* ... */

